# zephyr-honeygui

./: README.md  west.yml
applications/honeygui/: CMakeLists.txt  Kconfig  honeygui.code-workspace  prj.conf  rtl8762gn_evb.overlay
applications/honeygui/app/: main.c
applications/honeygui/driver/: CMakeLists.txt
applications/honeygui/driver/display/: CMakeLists.txt  display_bee4_7701s.c
applications/honeygui/dts/bindings/: bee4,st7701s.yaml  vendor-prefixes.txt
applications/honeygui/src/: main.c
